correct baseurl stuff, edit gitignore, delete built site

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ permalink: /
 
 <div class="hero">
   <div class="title">
-    <img src="/images/bird.png"/><span>Althea</span>
+    <img src="{{ '/images/bird.png' | prepend: site.baseurl }}"/><span>Althea</span>
   </div>
 </div>
 
