added blog post, worked on styles and logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ permalink: /
   We're creating a new Internet, a mesh network where routers are owned independently and compensated automatically for providing bandwidth to the network.
 </p>
 <p>
-  We're developing IP protocols that have payment built in, creating incentives for rapid expansion and investment in the network. At the same time, the ability for routers to be funded and compensated autonomously allows for a completely decentralized architecture without the need for governments or businesses.
+  We're developing internet protocols that have payment built in, creating incentives for rapid expansion and investment in the network. At the same time, the ability for routers to be funded and compensated autonomously allows for a completely decentralized architecture without the need for governments or businesses.
 </p>
 
 <div class="grid">
