front page layout

--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@ permalink: /
   </p>
 
 
-  <div class="grid">
-    <div class="col-1-1 text-center">
-      <h1><a href="/blog">Blog</a></h1>
-      <div>In-the-moment notes on our processes and philosopies.</div>
-    </div>
+  <div class="text-center">
+    <h1><a href="/blog">Blog</a></h1>
+    <div>In-the-moment notes on our processes and philosopies.</div>
   </div>
 </div>
 
