--- a/index.html
+++ b/index.html
@@ -1,23 +1,51 @@
 ---
-layout: default
 permalink: /
 ---
+<!DOCTYPE html>
+<html>
+{% include head.html %}
+<body class="site{% if site.animated %} animated fade-in-down{% endif %}">
+  <div class="site-wrap">
+    {% include header.html %}
+  
+    <div class="post p2 p-responsive wrap" role="main">
+      <div class="measure">
+        <img src="/images/basic-diagram.png"/>
+        <div class="grid">
+          <div class="col-1-3">
+            End users load up their device or wifi router with blockchain tokens to pay for internet access.
+          </div>
+          <div class="col-1-3">
+            Neighborhood transmitters forward packets and receive payment, competing to provide service. 
+          </div>
+          <div class="col-1-3">
+            Regional uplinks act as gateways to the internet and receive payment, competing with other uplinks.
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+    
+  
 
-<div class="hero">
-  <div class="title">
-    <img src="{{ '/images/bird.png' | prepend: site.baseurl }}"/><span>Althea</span>
-  </div>
-</div>
+    <div class="black-bg">
+      <div class="measure">
+        <p>
+          The Internet currently relies on large, monopolistic ISPs. Due to the lack of meaningful competition, they are free to charge exorbitant rates, throttle speeds, and censor content.
+        </p>
+        <p>
+          We're creating a new Internet, a mesh network where routers are owned independently and compensated automatically for providing bandwidth to the network.
+        </p>
+        <p>
+          Althea is a set of internet protocols with payment built in, creating incentives for rapid expansion and investment in the network. At the same time, the ability for routers to be funded and compensated autonomously allows for a completely decentralized architecture without the need for governments or businesses.
+        </p>
+      </div>
+    </div>
+  {% include footer.html %}
+</body>
+</html>
 
-<div class="below-hero">
-  <p>
-    The Internet currently relies on large, monopolistic ISPs. Due to the lack of meaningful competition, they are free to charge exorbitant rates, throttle speeds, and censor content.
-  </p>
-  <p>
-    We're creating a new Internet, a mesh network where routers are owned independently and compensated automatically for providing bandwidth to the network.
-  </p>
-  <p>
-    We're developing internet protocols that have payment built in, creating incentives for rapid expansion and investment in the network. At the same time, the ability for routers to be funded and compensated autonomously allows for a completely decentralized architecture without the need for governments or businesses.
-  </p>
-</div>
+
+
+
 
