refine new frontpage and adjust colors

--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@ permalink: /
           </div>
         </div>
       </div>
-      </div>
     </div>
-    
-  
 
     <div class="black-bg">
       <div class="measure">
@@ -41,7 +38,16 @@ permalink: /
         </p>
       </div>
     </div>
-  {% include footer.html %}
+    
+    <!--<footer class="center black-bg">
+      <div class="measure">
+        <small>
+          Contact: jehan.tremback@gmail.com
+        </small>
+      </div>
+    </footer>-->
+    {% include footer.html %}
+  </div>
 </body>
 </html>
 
