remove footer on frontpage

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ permalink: /
         </small>
       </div>
     </footer>-->
-    {% include footer.html %}
+    <!--{% include footer.html %}-->
   </div>
 </body>
 </html>
