improvements to frontpage copy

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ permalink: /
         <img src="/images/basic-diagram.png"/>
         <div class="grid">
           <div class="col-1-3">
-            End users load up their device or wifi router with blockchain tokens to pay for internet access.
+            <h2>1</h2> End users load up their device or wifi router with blockchain tokens to pay for internet access.
           </div>
           <div class="col-1-3">
-            Neighborhood transmitters forward packets and receive payment, competing to provide service. 
+            <h2>2</h2> A mesh of rooftop transmitters forward packets. They earn tokens and compete to provide service. 
           </div>
           <div class="col-1-3">
-            Regional uplinks act as gateways to the internet and receive payment, competing with other uplinks.
+            <h2>3</h2> Uplinks act as gateways to the internet and receive payment, competing with other uplinks in the area.
           </div>
         </div>
       </div>
@@ -31,7 +31,7 @@ permalink: /
           The Internet currently relies on large, monopolistic ISPs. Due to the lack of meaningful competition, they are free to charge exorbitant rates, throttle speeds, and censor content.
         </p>
         <p>
-          Althea is a set of internet protocols with payment built in, creating incentives for rapid expansion and investment in the network. At the same time, the ability for routers to be funded and compensated autonomously allows for a completely decentralized architecture without the need for governments or businesses.
+          Althea is a set of internet protocols with payment built in, creating incentives for rapid expansion and investment in the network. Althea provides a way for people maintaining internet infrastructure to be funded and compensated autonomously, without the need for governments or businesses.
         </p>
       </div>
     </div>
