more frontpage copy edits

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ permalink: /
             <h2>2</h2> A mesh of rooftop transmitters forward packets. They earn tokens and compete to provide service. 
           </div>
           <div class="col-1-3">
-            <h2>3</h2> Uplinks act as gateways to the internet and receive payment, competing with other uplinks in the area.
+            <h2>3</h2> Uplinks act as gateways to the internet, also earning tokens, competing with other uplinks in the area.
           </div>
         </div>
       </div>
