--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ permalink: /
             <div class="col-1-2">
               <h2>Get in touch</h2>
               <a href="https://riot.im/app/#/room/#althea:matrix.org"><button class="button" >Join our chat</button></a>
-              <a href="hello@altheamesh.com"><button class="button" >Send us an email</button></a>
+              <a href="mailto:hello@altheamesh.com"><button class="button" >Send us an email</button></a>
             </div>
 
             <div class="col-1-2">
