add wisp use case

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@ permalink: /
     {% include header.html %}
     <!--<div class="post p2 p-responsive wrap" role="main">-->
     <div class="hero">
+      <div class="wisp-banner">Wireless ISPs: <a href="{{ site.url }}/use-cases/wisp">Click here</a> to learn how Althea can help you get more revenue out of your network.</div>
       <div class="title p2">
         <div class="measure">
           <div class="grid">
             <div class="col-2-3">
-              <h1>Create decentralized, cryptocurrency powered ISPs</h1>
+              <h1>Create decentralized, cryptocurrency powered networks</h1>
             </div>
           </div>
           <div class="grid">
