add how it works

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@ permalink: /
         </div>
         <hr/>
         <div class="grid center">
-          <a href="/documents/whitepaper.pdf"><button class="button" >Read the whitepaper</button></a>
+          <a href="/how-it-works"><button class="button" >More technical details</button></a>
+          <a href="/documents/whitepaper.pdf"><button class="button" >Whitepaper (the most technical details)</button></a>
         </div>
         <hr/>
       </div>
