add demo video and new blog

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@ permalink: /
       </div>
       <!--<img src="/images/transmitters-sky.png"/>-->
     </div>
-
+    <div class="wrap p2 center">
+      <h1 class="center">Demonstration</h1>
+      <iframe width="500" height="315" src="https://www.youtube.com/embed/IyFEYEcHJyA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+    </div>
     <div class="wrap p2">
-
       <div class="measure">
         <h1 class="center">What it is</h1>
         <div class="grid">
