--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@ permalink: /
       <h1 class="center">Demonstration</h1>
       <iframe width="500" height="315" src="https://www.youtube.com/embed/IyFEYEcHJyA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
     </div> -->
-      <h1 style="text-align: center; margin-top: 20px">Prospective deployments</h1>
     {% include althea-node-locator.html %}
     <div class="wrap p2">
       <div class="measure">
@@ -113,7 +112,7 @@ permalink: /
 
     <div class="bottom-hero">
       <div class="title p2">
-        <h1 class="center">How do I start an Althea network?</h1>
+        <h1 class="center">Get in touch with the team</h1>
 
         <div class="measure">
           <div class="grid">
@@ -125,33 +124,11 @@ permalink: /
           </div>
           <div class="grid">
 
-            <div class="col-1-2">
-              <h2>Get in touch</h2>
-              <a href="https://riot.im/app/#/room/#althea:matrix.org"><button class="button" >Join our chat</button></a>
-              <a href="mailto:hello@altheamesh.com"><button class="button" >Send us an email</button></a>
-            </div>
 
-            <div class="col-1-2">
-              <!-- Begin MailChimp Signup Form -->
-              <div id="mc_embed_signup">
-                <form action="//altheamesh.us16.list-manage.com/subscribe/post?u=c87d58f5214c1662412ff17d0&amp;id=bb89cc7a8a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                  <div id="mc_embed_signup_scroll">
-                    <h2>Get updates on the project</h2>
-                    <div class="mc-field-group">
-                      <label for="mce-EMAIL">Email Address </label>
-                      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="your email">
-                    </div>
-                    <div id="mce-responses" class="clear">
-                      <div class="response" id="mce-error-response" style="display:none"></div>
-                      <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div> 
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c87d58f5214c1662412ff17d0_bb89cc7a8a" tabindex="-1" value=""></div>
-                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                  </div>
-                </form>
-              </div>
-              <!--End mc_embed_signup-->
+            <h2>Get in touch</h2>
+            <div style="display: flex">
+              <a style="margin-right: 10px" href="https://riot.im/app/#/room/#althea:matrix.org"><button class="button" >Join our chat</button></a>
+              <a href="mailto:hello@altheamesh.com"><button class="button" >Send us an email</button></a>
             </div>
 
 
