--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ permalink: /
         <div class="grid">
           <div class="col-1-3">
             <div class="bullet-image">
-              <img src="/images/mesh.png"/>
+              <img src="{{ /images/mesh.png | relative_url }}"/>
             </div>
           </div>
           <div class="col-2-3">
@@ -66,7 +66,7 @@ permalink: /
         <div class="grid">
           <div class="col-1-3">
             <div class="bullet-image">
-              <img src="/images/choice.png"/>
+              <img src="{{ /images/choice.png | prepend: site.baseurl}}"/>
             </div>
           </div>
           <div class="col-2-3">
