put prepend arg in a string

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ permalink: /
         <div class="grid">
           <div class="col-1-3">
             <div class="bullet-image">
-              <img src="{{ /images/choice.png | prepend: site.baseurl}}"/>
+              <img src="{{ '/images/choice.png' | prepend: site.baseurl}}"/>
             </div>
           </div>
           <div class="col-2-3">
