--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ permalink: /
         <div class="grid">
           <div class="col-1-3">
             <div class="bullet-image">
-              <img src="{{ /images/mesh.png | relative_url }}"/>
+              <img src="{{ '/images/mesh.png' | prepend: site.baseurl }}"/>
             </div>
           </div>
           <div class="col-2-3">
@@ -66,7 +66,7 @@ permalink: /
         <div class="grid">
           <div class="col-1-3">
             <div class="bullet-image">
-              <img src="{{ '/images/choice.png' | prepend: site.baseurl}}"/>
+              <img src="{{ '/images/choice.png' | prepend: site.baseurl }}"/>
             </div>
           </div>
           <div class="col-2-3">
@@ -77,7 +77,7 @@ permalink: /
         <div class="grid">
           <div class="col-1-3">
             <div class="bullet-image">
-              <img src="/images/lock.png"/>
+              <img src="{{'/images/lock.png' | prepend: site.baseurl }}"/>
             </div>
           </div>
           <div class="col-2-3">
@@ -89,7 +89,7 @@ permalink: /
 
       <div class="measure">
         <h1 class="center">How it works</h1>
-        <img src="/images/basic-diagram.png"/>
+        <img src="{{'/images/basic-diagram.png' |  prepend: site.baseurl}}"/>
         <div class="grid">
           <div class="col-1-3">
             <h2>1</h2> End users load up their device or wifi router with blockchain tokens to pay for internet access.
@@ -103,7 +103,7 @@ permalink: /
         </div>
         <hr/>
         <div class="grid center">
-          <a href="/how-it-works"><button class="button" >More technical details</button></a>
+          <a href="{{'/how-it-works' | prepend: site.baseurl}}"><button class="button" >More technical details</button></a>
           <a href="/documents/whitepaper.pdf"><button class="button" >Whitepaper (the most technical details)</button></a>
         </div>
         <hr/>
