add more relative urls to index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ permalink: /
         <hr/>
         <div class="grid center">
           <a href="{{'/how-it-works' | prepend: site.baseurl}}"><button class="button" >More technical details</button></a>
-          <a href="/documents/whitepaper.pdf"><button class="button" >Whitepaper (the most technical details)</button></a>
+          <a href="{{'/documents/whitepaper.pdf' | prepend: site.baseurl}}"><button class="button" >Whitepaper (the most technical details)</button></a>
         </div>
         <hr/>
       </div>
