get rid of tons of prepend crap

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ permalink: /
           </div>
           <h2 style="text-align: center" >Get updates on the project</h2>
           <div style="display: flex; flex: 1; flex-wrap: wrap; justify-content: space-evenly;">
-              <a class="button" style="margin-right: 5px; margin-bottom: 15px" href="#"><img src="{{'/images/medium.svg' |  prepend: site.baseurl}}"/>Medium</a>
-              <a class="button" style="margin-right: 5px; margin-bottom: 15px" href="https://twitter.com/Altheamesh"><img src="{{'/images/twitter.svg' | prepend: site.baseurl}}"/>Twitter</a>
+              <a class="button" style="margin-right: 5px; margin-bottom: 15px" href="#"><img src="/images/medium.svg"/>Medium</a>
+              <a class="button" style="margin-right: 5px; margin-bottom: 15px" href="https://twitter.com/Altheamesh"><img src="/images/twitter.svg"/>Twitter</a>
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup" style="display: block;">
               <form action="//altheamesh.us16.list-manage.com/subscribe/post?u=c87d58f5214c1662412ff17d0&amp;id=bb89cc7a8a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate >
@@ -50,7 +50,7 @@ permalink: /
         <div class="grid">
           <div class="col-1-3">
             <div class="bullet-image">
-              <img src="{{ '/images/mesh.png' | prepend: site.baseurl }}"/>
+              <img src="/images/mesh.png"/>
             </div>
           </div>
           <div class="col-2-3">
@@ -61,7 +61,7 @@ permalink: /
         <div class="grid">
           <div class="col-1-3">
             <div class="bullet-image">
-              <img src="{{ '/images/choice.png' | prepend: site.baseurl }}"/>
+              <img src="/images/choice.png"/>
             </div>
           </div>
           <div class="col-2-3">
@@ -72,7 +72,7 @@ permalink: /
         <div class="grid">
           <div class="col-1-3">
             <div class="bullet-image">
-              <img src="{{'/images/lock.png' | prepend: site.baseurl }}"/>
+              <img src="/images/lock.png"/>
             </div>
           </div>
           <div class="col-2-3">
@@ -84,7 +84,7 @@ permalink: /
 
       <div class="measure">
         <h1 class="center">How it works</h1>
-        <img src="{{'/images/basic-diagram.png' |  prepend: site.baseurl}}"/>
+        <img src="/images/basic-diagram.png"/>
         <div class="grid">
           <div class="col-1-3">
             <h2>1</h2> End users load up their device or wifi router with blockchain tokens to pay for internet access.
@@ -98,8 +98,8 @@ permalink: /
         </div>
         <hr/>
         <div class="grid center">
-          <a href="{{'/how-it-works' | prepend: site.baseurl}}"><button class="button" >More technical details</button></a>
-          <a href="{{'/documents/whitepaper.pdf' | prepend: site.baseurl}}"><button class="button" >Whitepaper (the most technical details)</button></a>
+          <a href="/how-it-works"><button class="button" >More technical details</button></a>
+          <a href="/documents/whitepaper.pdf"><button class="button" >Whitepaper (the most technical details)</button></a>
         </div>
         <hr/>
       </div>
