--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ permalink: /
       <div class="title p2">
         <div class="measure">
           <div style="display: flex; align-items: center; flex-direction: column; overflow: hidden">
-            <h1 style="text-align: center;">Create decentralized, cryptocurrency powered networks</h1>
+            <h1 style="text-align: center; width: 100%">Create decentralized, cryptocurrency powered networks</h1>
             <iframe width="500" height="315" src="https://www.youtube.com/embed/IyFEYEcHJyA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h2 style="text-align: center" >Get updates on the project</h2>
