--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ permalink: /
           </div>
           <h2 style="text-align: center" >Get updates on the project</h2>
           <div style="display: flex; flex: 1; flex-wrap: wrap; justify-content: space-evenly;">
-              <a class="button" style="margin-right: 5px; margin-bottom: 15px" href="#"><img src="/images/medium.svg"/>Medium</a>
+              <a class="button" style="margin-right: 5px; margin-bottom: 15px" href="https://medium.com/althea-mesh"><img src="/images/medium.svg"/>Medium</a>
               <a class="button" style="margin-right: 5px; margin-bottom: 15px" href="https://twitter.com/Altheamesh"><img src="/images/twitter.svg"/>Twitter</a>
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup" style="display: block;">
