add nicer css on buttons and forms

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ permalink: /
           </div>
           <h2 style="text-align: center" >Get updates on the project</h2>
           <div style="display: flex; flex: 1; flex-wrap: wrap; justify-content: space-evenly;">
-              <a class="button" style="margin-right: 5px; margin-bottom: 15px" href="https://medium.com/althea-mesh"><img src="/images/medium.svg"/>Medium</a>
-              <a class="button" style="margin-right: 5px; margin-bottom: 15px" href="https://twitter.com/Altheamesh"><img src="/images/twitter.svg"/>Twitter</a>
+              <!-- <a class="button" style="margin-right: 5px; margin-bottom: 15px" href="https://medium.com/althea-mesh"><img src="/images/medium.svg"/>Medium</a> -->
+              <a class="button" style="margin-right: 5px; margin-bottom: 15px" href="https://twitter.com/Altheamesh"><img src="/images/twitter.svg"/>Follow us on Twitter</a>
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup" style="display: block;">
               <form action="//altheamesh.us16.list-manage.com/subscribe/post?u=c87d58f5214c1662412ff17d0&amp;id=bb89cc7a8a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate >
@@ -34,7 +34,7 @@ permalink: /
                   </div> 
                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                   <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c87d58f5214c1662412ff17d0_bb89cc7a8a" tabindex="-1" value=""></div>
-                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" style="margin-left: 5px">
                 </div>
               </form>
             </div>
