switch to new map and cleanup

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@ permalink: /
         </div>
       </div>
     </div>
-    {% include althea-node-locator.html action="https://althea-node-map.firebaseapp.com/submit" %}
+
+    {% include althea-node-locator.html  %}
+    
     <div class="wrap p2">
       <div class="measure">
         <h1 class="center">What it is</h1>
