change whitepaper link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ permalink: /
         <hr/>
         <div style="display: flex; justify-content: center; flex-wrap: wrap; margin-bottom: -10px">
           <a href="/how-it-works"><button class="button" style="margin-right: 10px; margin-bottom: 10px">More technical details</button></a>
-          <a href="/documents/whitepaper.pdf"><button class="button" style="margin-bottom: 10px">Whitepaper (the most technical details)</button></a>
+          <a href="/network-paper"><button class="button" style="margin-bottom: 10px">Whitepaper (the most technical details)</button></a>
         </div>
         <hr/>
       </div>
