buy a router loading indicator

--- a/buy-router.html
+++ b/buy-router.html
@@ -4,7 +4,7 @@ title: Buy a router
 permalink: /buy-a-router
 ---
 
-<div id='product-component-01587743278'></div>
+<div id='product-component-01587743278'><h3 style="position: absolute; z-index: -1;">Loading...</h3></div>
 <script type="text/javascript">
 /*<![CDATA[*/
 
