add discord to index

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ permalink: /
 
             <h2>Get in touch</h2>
             <div style="display: flex; align-items: baseline">
-              <a style="margin-right: 10px" href="https://riot.im/app/#/room/#althea:matrix.org"><button class="button" >Join our chat</button></a>
+              <a style="margin-right: 10px" href="https://discord.gg/6EKgJfT"><button class="button" >Join our chat</button></a>
               <h3>or send us an email: <b>hello@altheamesh.com</b></h3>
               <!-- <a href="mailto:hello@altheamesh.com"><button class="button" >Send us an email</button></a> -->
             </div>
